# ari

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
ari/: __init__.py  aws_cli_mapper.py  aws_inventory.py  cli.py  config.py
docs/: CONTRIBUTING.md  USAGE.md  status_2025-04-17.md
scripts/: __init__.py  ari_run.py  ari_wrapper.sh  release_helper.py  update.sh  update_db.py
